adjusted yaml docstrings
